# sg-open-data

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
projects/sg_weather/: CHANGELOG.md  README.md
projects/sg_weather/config/: settings.py
projects/sg_weather/pipelines/prefect_flows/: elt_flow.py
projects/sg_weather/scripts/: clear_tables.py  download_historical.py  historical_download_load.py  load_to_database.py  run_elt_pipeline.py  run_mlflow_server.py  run_prefect_server.py  test_db.py  test_download.py  test_transform.py
projects/sg_weather/src/: __init__.py
projects/sg_weather/src/ingestion/: client.py  downloader.py  processor.py  storage.py
projects/sg_weather/src/processing/: transform.py
projects/sg_weather/src/processing/sql/: create_transform_tables.sql  process_areas.sql  process_four_day_forecast.sql  process_pm25.sql  process_psi.sql  process_regions.sql  process_station_measurements.sql  process_stations.sql  process_twenty_four_hour_forecast.sql  process_two_hour_forecast.sql  process_uv_index.sql
projects/sg_weather/src/schemas/: __init__.py  weather.py
